# CSCI598-Scientific_Visualization

./: .gitignore  CMakeLists.txt  README.txt
painterly/: Makefile  RGB.h  image.cpp  image.h  painter.cpp
project1/: .gitignore  CMakeLists.txt  Makefile  README.txt  RGB.cpp  RGB.h  Vector.h  image.cpp  image.h  nucleon.txt  raytrace  raytrace.cpp  sandbox.cpp  sandbox_gradient.cpp  sandbox_trilinear.cpp  sandbox_vector.cpp  volume
project1/images/: nucleon.txt
project1/src/: CMakeLists.txt  Vector.cpp  Vector.h  raytrace.cpp
project1/unit/: CMakeLists.txt  src_vector.cc
project3/: Makefile  README.txt  RGB.h  eqn.txt  image.cpp  image.h  proj3.cpp
test_framework/: CMakeLists.txt
